--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
             <div>
                 <div class="flex items-center space-x-3 mb-4">
                     <div class="w-12 h-12">
-                     <img class="rounded-full" src="/assets/image/logo.png" alt="logo">
+                     <img class="rounded-full" src="/logo.png" alt="logo">
                     </div>
                     <div>
                         <h3 class="text-xl font-bold">EDU Center</h3>
@@ -32,11 +32,11 @@
             <div>
                 <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
                 <ul class="space-y-2">
-                    <li><a href="index.html" class="text-gray-300 hover:text-orange-primary transition-colors">Home</a></li>
-                    <li><a href="about.html" class="text-gray-300 hover:text-orange-primary transition-colors">About Us</a></li>
-                    <li><a href="classes.html" class="text-gray-300 hover:text-orange-primary transition-colors">Classes</a></li>
-                    <li><a href="teachers.html" class="text-gray-300 hover:text-orange-primary transition-colors">Teachers</a></li>
-                    <li><a href="blog.html" class="text-gray-300 hover:text-orange-primary transition-colors">Blog</a></li>
+                    <li><a href="/index.html" class="text-gray-300 hover:text-orange-primary transition-colors">Home</a></li>
+                    <li><a href="/page/about.html" class="text-gray-300 hover:text-orange-primary transition-colors">About Us</a></li>
+                    <li><a href="/page/classes.html" class="text-gray-300 hover:text-orange-primary transition-colors">Classes</a></li>
+                    <li><a href="/page/teachers.html" class="text-gray-300 hover:text-orange-primary transition-colors">Teachers</a></li>
+                    <li><a href="/page/blog.html" class="text-gray-300 hover:text-orange-primary transition-colors">Blog</a></li>
                 </ul>
             </div>
 
